# youtube-analytics-project

./: .gitignore  pyproject.toml  requirements.txt
src/: channel.py  cnst.py  playlist.py  video.py  youtubeapi.py
tests/: test_channel.py  test_playlist.py  test_video.py
